# whist

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  SCHEMA.md  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  import_trakt.py  import_trakt_movies.py  main.py  models.py  tmdb.py
backend/routers/: episodes.py  movies.py  people.py  schedule.py  shows.py
frontend/: index.html
scripts/: screenshot.py
