[project]
name = "whist"
version = "0.1.0"
description = "Self-hosted personal TV/movie tracking app — where have I seen them?"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
